# Project-Data-Driven-Engineering

./: README.md  data_loader.py  pyproject.toml
EDA/: EDA.ipynb
ETL/: extract.py  load.py  main.py  transform.py
Experiments/: data_loader.py
Experiments/api_example/: README.md  api_reader.py  pyproject.toml
Experiments/src/: write_to_db.py
api_example/: README.md  api_reader.py
notebooks/: EDA.ipynb
src/: write_to_db.py
