[project]
name = "project-scin-cancer"
version = "0.1.0"
description = ""
authors = [
    {name = "Korol Aleksandra",email = "korol@scamt-itmo.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "wget (>=3.2,<4.0)",
    "numpy (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "project_scin_cancer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
