[project]
name = "project-scin-cancer"
version = "0.1.0"
description = ""
authors = [
    {name = "Korol Aleksandra",email = "korol@scamt-itmo.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "wget (>=3.2,<4.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "stats (>=0.1.2a0,<0.2.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "plotly-express (>=0.4.1,<0.5.0)"
]

[tool.poetry]
packages = [{include = "project_scin_cancer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
