[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "scin_cancer"
version = "0.0.1"
description = "\u0412 \u0445\u043e\u0434\u0435 \u0434\u0430\u043d\u043d\u043e\u0433\u043e \u043f\u0440\u043e\u0435\u043a\u0442\u0430 \u0431\u0443\u0434\u0435\u0442 \u0440\u0430\u0441\u0441\u043c\u043e\u0442\u0435\u043d \u0434\u0430\u0442\u0430\u0441\u0435\u0442 \u043f\u043e \u043a\u043e\u0436\u043d\u044b\u043c \u043f\u043e\u0440\u0430\u0436\u0435\u043d\u0438\u044f\u043c."
authors = [
  { name = "Aleksandra Korol" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "pip",
    "python-dotenv",
    "pandas (>=2.3.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "path (>=17.1.1,<18.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "jupyterlab (>=4.4.10,<5.0.0)",
]
requires-python = "~=3.13.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["scin_cancer"]
force_sort_within_sections = true


